syntax = "proto3";
package ctrl.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/ctrl/v1;ctrlv1";

service BuildService {
  rpc CreateBuild(CreateBuildRequest) returns (CreateBuildResponse) {}
  rpc CancelBuild(CancelBuildRequest) returns (CancelBuildResponse) {}
  rpc GetBuildStatus(GetBuildStatusRequest) returns (GetBuildStatusResponse) {}
}

message CreateBuildRequest {
  string imagePath = 1; // Path to Dockerfile
  string contextPath = 2; // Build context directory
  string unkeyProjectID = 3; // Your internal user/project ID
}

message CreateBuildResponse {
  string imageName = 1; // Full image tag (registry.depot.dev/project:tag)
  string buildId = 2; // Depot build ID for tracking
  string depotProjectId = 3; // Depot project ID
}

message CancelBuildRequest {
  string buildId = 1; // Depot build ID to cancel
}

message CancelBuildResponse {
  bool success = 1;
}

message GetBuildStatusRequest {
  string buildId = 1;
}

message GetBuildStatusResponse {
  enum Status {
    UNKNOWN = 0;
    RUNNING = 1;
    SUCCESS = 2;
    FAILED = 3;
    CANCELLED = 4;
  }
  Status status = 1;
  string error = 2; // Error message if failed
}
